# 1bit-vision-v2

./: .gitignore  pyproject.toml
src/: binaryattn.py  dataset.py  engine.py  model.py  train.py  utils.py
